Merge fixes